# llama-server

./: .gitignore  README.md  install-llama.sh  nolog.patch  pyproject.toml  requirements.txt  server.py  setup.cfg  setup.py  system_prompt.patch
examples/: llama2_prompt.json  llava_prompt.json  multimodal.ipynb  multimodal.md  parallel-inference.ipynb
src/llama_server/: __init__.py  server.py
src/llama_server/.ipynb_checkpoints/: server-checkpoint.py
