[metadata]
name = llama_server
version = attr: llama_server.VERSION
author = Yuchao Qin
author_email = yvchao@outlook.com
description = A simple wrapper for llama.cpp server
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = BSD-3-Clause
license_files = LICENSE.txt
keywords = llama
url = https://github.com/yvchao/llama-server

platforms = Linux

classifiers =
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
python_requires = >=3.8
install_requires =
    importlib-metadata; python_version<"3.8"
    pillow~=10.0.1
    aiohttp~=3.8.1
    click~=8.1.5
    loguru~=0.5.3

[options.packages.find]
where = src
exclude =
    tests
